--- a/dev/SAllocatePlus/SAllocatePlusApp/SAllocateApp/www/index.html
+++ b/dev/SAllocatePlus/SAllocatePlusApp/SAllocateApp/www/index.html
@@ -32,6 +32,7 @@
 
     <script src="js/controllers/jobListCtrl.js"></script>
     <script src="js/controllers/jobDetailCtrl.js"></script>
+    <script src="js/controllers/confirmedJobCtrl.js"></script>
 
   </head>
 
